force-app/main/default/objects/Chat_Message_Finalized__e/Chat_Message_Finalized__e.object-meta.xml
<CustomObject>
    <description
  >Published by the external SSE edge when an assistant message is finalized; consumed by an Apex trigger to upsert Chat_Message__c.</description>
    <label>Chat Message Finalized</label>
    <pluralLabel>Chat Message Finalizeds</pluralLabel>
</CustomObject>