force-app/main/default/objects/Chat_Message_Finalized__e/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>