force-app/main/default/objects/Chat_Message_Finalized__e/fields/Message_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_External_Id__c</fullName>
    <label>Message External Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>