force-app/main/default/objects/Chat_Message_Finalized__e/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>