force-app/main/default/objects/Chat_Message_Finalized__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description
  >Salesforce User Id (15- or 18-char) the conversation belongs to.</description>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>